--- a/CPPVersionControlTest/CPPVersionControlTest.vcxproj
+++ b/CPPVersionControlTest/CPPVersionControlTest.vcxproj
@@ -130,6 +130,9 @@
     <ClCompile Include="CPPVersionControlTest.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Feature.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
