--- a/CPPVersionControlTest/CPPVersionControlTest.vcxproj
+++ b/CPPVersionControlTest/CPPVersionControlTest.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CPPVersionControlTest.cpp" />
+    <ClCompile Include="Feature.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
